// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`C3188679 imported power-pin labels: C3188679-pin-labels 1`] = `
[
  {
    "aliases": [
      "pin1",
      "1",
    ],
    "name": "pin1",
    "pinNumber": 1,
  },
  {
    "aliases": [
      "pin3",
      "3",
    ],
    "name": "pin3",
    "pinNumber": 3,
  },
]
`;

exports[`C3662807 imported power-pin labels: C3662807-pin-labels 1`] = `
[
  {
    "aliases": [
      "pin1",
      "1",
    ],
    "name": "pin1",
    "pinNumber": 1,
  },
  {
    "aliases": [
      "pin2",
      "2",
    ],
    "name": "pin2",
    "pinNumber": 2,
  },
  {
    "aliases": [
      "pin3",
      "3",
    ],
    "name": "pin3",
    "pinNumber": 3,
  },
  {
    "aliases": [
      "pin4",
      "4",
    ],
    "name": "pin4",
    "pinNumber": 4,
  },
]
`;
